[package]
name = "pubdex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
clap = {version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
once_cell = "1.21.3"
rocksdb = "0.23.0"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.44.2", features = ["macros", "rt-multi-thread"] }
