[package]
name = "pubdex"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
bitcoin = "0.32.5"
bitcoincore-rpc = "0.19.0"
clap = {version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
ctrlc = "3.4.6"
once_cell = "1.21.3"
rocksdb = "0.23.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.44.2", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
